[project]
name = "amojowrapper"
version = "0.1.0"
description = "github.com/tmedvedevv/amojowrapper"
authors = [
    {name = "tmedvedevv",email = "tmedvedevv@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-dotenv = "^0.5.2"
pytest-sugar = "^1.0.0"
pytest-dependency = "^0.6.0"


[tool.poetry.scripts]
amojowrapper = "amojowrapper.__main__:main"


[tool.black]
line-length = 88